Remove code that blanks out existing order summmaries and service requests